--- a/src/client/app/recepie-edit-form/recepie-edit-form.component.sass
+++ b/src/client/app/recepie-edit-form/recepie-edit-form.component.sass
@@ -2,6 +2,13 @@
 @import '../../custom_theme.sass'
 @include angular-material-theme($recepies-app-theme)
 
+.header-container
+    display: flex
+    justify-content: space-between
+    align-items: center
+    &__h1
+        margin: 0 0 8px 0
+
 .recepie-form
     display: flex
     flex-direction: column
@@ -52,5 +59,5 @@
             justify-content: space-between
             padding: 16px
 
-        &__submit
+        &__button
             margin-left: 16px
