--- a/src/client/app/app.component.sass
+++ b/src/client/app/app.component.sass
@@ -4,18 +4,47 @@
 .sidenav-container
     height: 100%
     width: 100%
-    min-height: 100vh
 
 .sidenav
     width: 150px
     padding: 16px
     display: flex
+    flex-direction: column
+    justify-content: flex-start
+    padding-top: 64px
+    overflow-y: auto
+    max-height: 100vh
+    position: fixed
     background-color: mat-color($recepies-app-accent)
     &__button
         position: absolute
         top: 16px
         left: 16px
         color: white
+    &__group
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        flex-shrink: 0
+        &:first-of-type
+            border-bottom: 2px solid mat-color($recepies-app-primary, 900)
+            margin-bottom: 8px
+    &__link
+        display: flex
+        flex-direction: column
+        align-items: center
+        text-decoration: none
+        flex-shrink: 0
+        padding: 8px 0
+        border: 1px dashed
+        margin-bottom: 8px
+        border-radius: 2px
+        color: mat-color($recepies-app-primary, 900)
+        transition: background-color .3s
+        &:hover,
+        &:focus
+            background-color: rgba(mat-color($recepies-app-primary), 0.2)
+
     .mat-icon.mat-accent
         color: mat-color($recepies-app-primary)
 
