--- a/src/client/app/recepies-list/recepies-list.component.sass
+++ b/src/client/app/recepies-list/recepies-list.component.sass
@@ -1,3 +1,23 @@
+@import '~@angular/material/theming'
+@import '../../custom_theme.sass'
+@include angular-material-theme($recepies-app-theme)
+
+.home-header
+    height: 150px
+    border-radius: 2px
+    background-position: bottom
+    background-size: cover
+    margin-bottom: 16px
+    display: flex
+    align-items: center
+    justify-content: center
+    &__h1
+        background-color: rgba(mat-color($recepies-app-primary), .85)
+        padding: 4px 16px
+        border-bottom: 2px solid mat-color($recepies-app-accent)
+        border-top: 2px solid mat-color($recepies-app-accent)
+        color: mat-color($recepies-app-accent)
+
 .list-grid
     display: flex
     flex-wrap: wrap
@@ -10,12 +30,18 @@
 
 
 @media screen and (min-width: 560px)
+    .home-header
+        height: 200px
+
     .list-grid
         &__item
             width: 50%
 
 
 @media screen and (min-width: 820px)
+    .home-header
+        height: 250px
+
     .list-grid
         &__item
             width: 33.3%
@@ -23,6 +49,8 @@
 
 
 @media screen and (min-width: 1080px)
+    .home-header
+        height: 300px
     .list-grid
         &__item
             width: 25%
