Finished with styling base layout for now, time for user authentication

--- a/src/client/app/footer/footer.component.html
+++ b/src/client/app/footer/footer.component.html
@@ -1,3 +1,11 @@
 <footer class="footer-container">
-    <mat-icon>person_outline</mat-icon>
+    <a class="footer-container__link" mat-button color="accent" href="https://www.linkedin.com/in/pawel-marcinkowski/">
+        <span>LinkedIn </span><mat-icon>person_outline</mat-icon>
+    </a>
+    <a class="footer-container__link" mat-button color="accent" href="https://github.com/wafel34">
+        <span>GitHub </span><mat-icon>folder_open</mat-icon>
+    </a>
+    <button class="footer-container__link" mat-button color="accent" routerLink="/about">
+        <span>About / Contact </span><mat-icon>info_outline</mat-icon>
+    </button>
 </footer>
