--- a/src/client/app/footer/footer.component.sass
+++ b/src/client/app/footer/footer.component.sass
@@ -6,3 +6,11 @@
     height: 75px
     margin-top: 16px
     background-color: mat-color($recepies-app-primary, 900)
+    display: flex
+    align-items: center
+    justify-content: center
+    border-top: 1px solid mat-color($recepies-app-primary)
+    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.25)
+    &__link
+        display: flex
+        align-items: center
