--- a/src/client/styles.sass
+++ b/src/client/styles.sass
@@ -13,6 +13,7 @@ body
     margin: 0 auto
     overflow: hidden
     margin-top: 24px
+    min-height: 100vh
 
 
 @media screen and (min-width: 1280px)
