Small visual enhancments and stareted with register and login components

--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -38,14 +38,14 @@
             </button>
         </div>
         <div class="toolbar__item">
-            <button class="toolbar__button" mat-button>
+            <a class="toolbar__button" mat-button routerLink="/register">
                 <span>Register</span>
                 <mat-icon color="accent">add_circle</mat-icon>
-            </button>
-            <button class="toolbar__button" mat-button>
+            </a>
+            <a class="toolbar__button" mat-button routerLink="/login">
                 <span>Login</span>
                 <mat-icon color="accent">account_circle</mat-icon>
-            </button>
+            </a>
         </div>
     </mat-toolbar>
 
