--- a/src/client/styles.sass
+++ b/src/client/styles.sass
@@ -7,13 +7,19 @@ html, body
     padding: 0
 body
     font-family: 'Sarala', 'monospace'
+    overflow-x: hidden
 
 .app-container
     max-width: 94%
     margin: 0 auto
     overflow: hidden
     margin-top: 24px
-    min-height: 100vh
+    min-height: calc(100vh - 171px)
+
+
+@media screen and (min-width: 601px)
+    .app-container
+        min-height: calc(100vh - 179px)
 
 
 @media screen and (min-width: 1280px)
