Created api routes validation and started creating login logic

--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -15,7 +15,7 @@
                 About
             </a>
         </div>
-        <div class="sidenav__group">
+        <div class="sidenav__group" *ngIf="this.auth.isLoggedIn()">
             <a class="sidenav__link" routerLink="" (click)="sidenav.toggle()">
                 <mat-icon>face</mat-icon>
                 Your recepies
