--- a/src/client/app/recepies-list/recepies-list.component.sass
+++ b/src/client/app/recepies-list/recepies-list.component.sass
@@ -2,6 +2,8 @@
 @import '../../custom_theme.sass'
 @include angular-material-theme($recepies-app-theme)
 
+.test
+    min-height: inherit
 .home-header
     height: 150px
     border-radius: 2px
