--- a/src/client/app/recepies-list/recepies-list.component.html
+++ b/src/client/app/recepies-list/recepies-list.component.html
@@ -2,7 +2,7 @@
     <div class="home-header" [ngStyle]="{'background-image': 'url(assets/italian-cuisine-2378729_1280.jpg)'}">
         <h1 class="home-header__h1">Cooking is easy!</h1>
     </div>
-    <mat-tab-group dynamicHeight="true">
+    <mat-tab-group class="test" dynamicHeight="true">
         <mat-tab label="All">
             <div class="list-grid">
                 <ng-container *ngFor="let recepie of recepies">
