Fixed scrolling on tab click

--- a/src/client/app/recepies-list/recepies-list.component.sass
+++ b/src/client/app/recepies-list/recepies-list.component.sass
@@ -2,8 +2,7 @@
 @import '../../custom_theme.sass'
 @include angular-material-theme($recepies-app-theme)
 
-.test
-    min-height: inherit
+
 .home-header
     height: 150px
     border-radius: 2px
@@ -19,6 +18,9 @@
         border-bottom: 2px solid mat-color($recepies-app-accent)
         border-top: 2px solid mat-color($recepies-app-accent)
         color: mat-color($recepies-app-accent)
+
+.tab-group
+    min-height: inherit
 
 .list-grid
     display: flex
