--- a/src/client/app/app.component.sass
+++ b/src/client/app/app.component.sass
@@ -57,3 +57,14 @@
 
     &__button
         color: mat-color($recepies-app-accent)
+
+    &__username
+        color: mat-color($recepies-app-accent)
+        font-size: 14px
+        border-right: 1px solid
+        padding: 0 15px
+        display: inline-block
+        vertical-align: middle
+        max-width: 120px
+        text-overflow: ellipsis
+        overflow: hidden
