--- a/src/client/app/user-recepies/user-recepies.component.html
+++ b/src/client/app/user-recepies/user-recepies.component.html
@@ -2,5 +2,5 @@
     <div class="home-header" [ngStyle]="{'background-image': 'url(assets/blueberries-2278921_1280.jpg)'}">
         <h1 class="home-header__h1">My recepies:</h1>
     </div>
-    <app-recepies-list></app-recepies-list>
+    <app-recepies-list [recepies]="recepies"></app-recepies-list>
 </div>
