Created front-end handling of favorites displaying and request

--- a/src/client/app/favorites/favorites.component.html
+++ b/src/client/app/favorites/favorites.component.html
@@ -1,3 +1,6 @@
-<p>
-  favorites works!
-</p>
+<div class="app-container">
+    <div class="home-header" [ngStyle]="{'background-image': 'url(assets/pizza-2973200_1280.jpg)'}">
+        <h1 class="home-header__h1">My favorite recepies:</h1>
+    </div>
+    <app-recepies-list [recepies]="recepies"></app-recepies-list>
+</div>
