--- a/src/client/app/recepie-card/recepie-card.component.html
+++ b/src/client/app/recepie-card/recepie-card.component.html
@@ -19,7 +19,9 @@
             View <mat-icon>visibility</mat-icon>
         </button>
         <button mat-raised-button color="accent" (click)="handleFavorite();">
-            Favourite<mat-icon>favorite_border</mat-icon>
+            Favourite
+                <mat-icon *ngIf="!this.isFavorite">favorite_border</mat-icon>
+                <mat-icon *ngIf="this.isFavorite" color="warn">favorite</mat-icon>
         </button>
     </mat-card-actions>
 
