Created emitting an event responsible for removing item for favorites and live updating the list when user is in 'favorites' section

--- a/src/client/app/home-page/home-page.component.sass
+++ b/src/client/app/home-page/home-page.component.sass
@@ -19,6 +19,13 @@
         border-top: 2px solid mat-color($recepies-app-accent)
         color: mat-color($recepies-app-accent)
 
+.not-found
+    text-align: center
+    margin: 15px auto
+    padding: 15px 20px
+    border-radius: 2px
+    border: 2px solid mat-color($recepies-app-warn)
+    max-width: 500px
 
 @media screen and (min-width: 560px)
     .home-header
