--- a/src/client/app/recepie-page/recepie-page.component.html
+++ b/src/client/app/recepie-page/recepie-page.component.html
@@ -1,5 +1,5 @@
 <div class="app-container" *ngIf="recepie !== undefined">
-    <mat-card class="recepie-page" [class.hidden]="editing || deleted">
+    <mat-card class="recepie-page" [class.hidden]="this.state==='editing' || this.state==='deleted'">
             <div class="recepie-page__image" [ngStyle]="{'background-image': 'url(' + recepie.photoUrl + ')'}">
             </div><!--recepie-page__image"-->
 
@@ -54,11 +54,11 @@
         </mat-card-content>
     </mat-card>
 
-<div [class.hidden]="!editing">
+<div [class.hidden]="this.state==='viewing' || this.state==='deleted'">
     <app-recepie-edit-form [recepie]="recepie" (cancel)="cancelEdit()" (submitted)="updateRecepiePage($event)"></app-recepie-edit-form>
 </div>
 
-<div [class.hidden]="!deleted" class="deleted">
+<div [class.hidden]="this.state==='editing' || this.state==='viewing'" class="deleted">
     <span class="deleted__message">Recepie has been deleted. <mat-icon>done</mat-icon></span>
     <a routerLink="/recepies" mat-raised-button color="accent">Go to Home Page</a>
 </div>
